# takefive-ffmpeg-source

./: .cursorrules  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  android.sh  build_takefive.sh  build_takefive_android.sh  ios.sh  package.json  patch_ffmpeg.sh  takefive-ffmpeg-kit.podspec
.github/workflows/: build-android.yml  build-ios.yml  build.yml
android/: README.md
android/ffmpeg-kit-android-lib/: CMakeLists.txt  build.gradle
android/ffmpeg-kit-android-lib/src/main/cpp/: ffmpegkit.c  ffprobekit.c  fftools_ffmpeg_opt.c  fftools_ffprobe.c  takefive_compat.h
android/ffmpeg-kit-android-lib/src/main/java/com/arthenica/ffmpegkit/: Abi.java  AbiDetect.java  AbstractSession.java  AsyncFFmpegExecuteTask.java  AsyncFFprobeExecuteTask.java  AsyncGetMediaInformationTask.java  CameraSupport.java  Chapter.java  FFmpegKit.java  FFmpegKitConfig.java  FFmpegSession.java  FFmpegSessionCompleteCallback.java  FFprobeKit.java  FFprobeSession.java  FFprobeSessionCompleteCallback.java  Level.java  Log.java  LogCallback.java  LogRedirectionStrategy.java  MediaInformation.java  MediaInformationJsonParser.java  MediaInformationSession.java  MediaInformationSessionCompleteCallback.java  NativeLoader.java  Packages.java  ReturnCode.java  Session.java  SessionState.java  Signal.java  Statistics.java  StatisticsCallback.java  StreamInformation.java
android/ffmpeg-kit-android-lib/src/test/java/com/arthenica/ffmpegkit/: FFmpegKitConfigTest.java  FFmpegKitTest.java  FFmpegSessionTest.java  FFprobeSessionTest.java
apple/: README.md  configure.ac
apple/src/: fftools_ffmpeg_filter.c
docs/: index.md
flutter/flutter/: README.md
flutter/flutter/android/: build.gradle
flutter/flutter/ios/: ffmpeg_kit_flutter.podspec
flutter/flutter/macos/: ffmpeg_kit_flutter.podspec
flutter/flutter_platform_interface/lib/: method_channel_ffmpeg_kit_flutter.dart
linux/: README.md  configure.ac
react-native/: README.md  ffmpeg-kit-react-native.podspec  package.json
react-native/android/: build.gradle
react-native/ios/: FFmpegKitReactNativeModule.h  FFmpegKitReactNativeModule.m  FFmpegKitReactNativeModule.mm
react-native/src/: index.d.ts  index.js
scripts/: apple.toolchain.cmake  build_android_aar.sh  build_android_libfreetype.sh  build_android_libharfbuzz.sh  build_android_libmp3lame.sh  build_android_libopenh264.sh  build_libass.sh  build_libexpat.sh  build_libfreetype.sh  build_libfribidi.sh  build_libharfbuzz.sh  build_libmp3lame.sh  build_libopenh264.sh  fetch_deps.sh  function-android.sh  function-ios.sh  postinstall.sh
scripts/apple/: expat.sh  ffmpeg-kit.sh  ffmpeg.sh  fontconfig.sh  freetype.sh  fribidi.sh  giflib.sh  gmp.sh  gnutls.sh  harfbuzz.sh  kvazaar.sh  lame.sh  leptonica.sh  libass.sh  libogg.sh  libpng.sh  libsamplerate.sh  libsndfile.sh  libtheora.sh  libvorbis.sh  libvpx.sh  libwebp.sh  libxml2.sh  nettle.sh  opencore-amr.sh  opus.sh  rubberband.sh  sdl.sh  shine.sh  speex.sh  tesseract.sh  tiff.sh  twolame.sh  vo-amrwbenc.sh  x264.sh  xvidcore.sh  zimg.sh
src/ffmpeg/: config.h  config_components.h
src/ffmpeg/doc/: config.texi
src/ffmpeg/ffbuild/: config.fate  config.mak  config.sh
src/ffmpeg/libavcodec/: 012v.d  4xm.d  8bps.d  a64multienc.d  aac_ac3_parser.d  aac_parser.d  aaccoder.d  aacenc.d  aacenc_is.d  aacenc_ltp.d  aacenc_pred.d  aacenc_tns.d  aacps_common.d  aacps_fixed.d  aacps_float.d  aacsbr.d  aacsbr_fixed.d  aasc.d  ac3_parser.d  ac3dec_fixed.d  ac3dec_float.d  ac3enc.d  adpcm.d  adpcmenc.d  adts_header.d  adx_parser.d  adxdec.d  adxenc.d  agm.d  aic.d  alac.d  alacenc.d  aliaspixdec.d  aliaspixenc.d  alsdec.d  amr_parser.d  anm.d  aom_film_grain.d  apac.d  apedec.d  (+536 more)
src/ffmpeg/libavdevice/: libavdevice.pc
src/ffmpeg/libavfilter/: af_aiir.d  af_anequalizer.d  avf_abitscope.d  avf_aphasemeter.d  avf_showfreqs.d  avf_showvolume.d  avf_showwaves.d  drawutils.d  f_drawgraph.d  f_graphmonitor.d  f_loop.d  libavfilter.pc  src_avsynctest.d  vf_chromakey.d  vf_ciescope.d  vf_convolution.d  (+20 more)
tools/android/: build.gradle  build.lts.gradle
tools/source/: SOURCE
(+428 files in other folders)
